More Lang support

--- a/src/gui/lang/cs.txt
+++ b/src/gui/lang/cs.txt
@@ -1,29 +1,36 @@
-ICON_PATH=Umístění ikony
-SEARCH=Vyhledat
-CLEAR=Vyčistit
-TOP_TOOLBAR_PATH_PLACEHOLDER=/cesta/k/záznamu
-CREATED=Vytvořeno
-WORKSPACE=Pracovní plocha
-FILE_NAME=Jméno souboru
-TAGS=Štítky
-FILENAME=Jméno souboru
-WELCOME_MSG=Uvítací zpráva - sem se napíše něco na úvod
-VALIDITY_END=Konec platnosti
-MODIFIED=Upraveno
-TIME_CREATED=Vytvořeno
-APP_TITLE=Termíny
-ACTION_FORWARD=Dopředu
-RECORD_ID=ID záznamu
-COLUMNS=Sloupce
-FAVORITES=Oblíbené
-DATA_FOLDER_PATH=Složka s daty
 ACTION_BACK=Zpět
-VALIDITY_START=Počátek platnosti
-TOP_TOOLBAR_INFO=
-TIME_MODIFIED=Upraveno
-ACTION_UP=Nahoru
+ACTION_FORWARD=Dopředu
 ACTION_REFRESH=Obnovit
-NAME=Jméno
-LEFT_DOCK_TITLE=Navigační panel
+ACTION_UP=Nahoru
+ANY=Libovolné
+ANY_TAGS_COMMA=Obsahující libovolný štítek (odděleno čárkou)
+APP_TITLE=Termíny
+CLEAR=Vyčistit
+COLUMNS=Sloupce
+CREATED=Vytvořeno
+DATA_FOLDER_PATH=Složka s daty
 DESCRIPTION=Popis
+EXCLUDE=Vynechat
+EXCLUDE_TAGS_COMMA=Vynechat štítky (odděleno čárkou)
+FAVORITES=Oblíbené
+FILE_NAME=Jméno souboru
+FILENAME=Jméno souboru
+ICON_PATH=Umístění ikony
+LEFT_DOCK_TITLE=Navigační panel
+MODIFIED=Upraveno
+NAME=Jméno
+RECORD_ID=ID záznamu
 RECORDS=Záznamy
+RECYCLE_BIN=Koš
+REQUIRED=Požadované
+REQUIRED_TAGS_COMMA=Požadované štítky (odděleno čárkou)
+SEARCH=Vyhledat
+TAGS=Štítky
+TIME_CREATED=Vytvořeno
+TIME_MODIFIED=Upraveno
+TOP_TOOLBAR_INFO=
+TOP_TOOLBAR_PATH_PLACEHOLDER=/cesta/k/záznamu
+VALIDITY_END=Konec platnosti
+VALIDITY_START=Počátek platnosti
+WELCOME_MSG=Uvítací zpráva - sem se napíše něco na úvod
+WORKSPACE=Pracovní plocha
