Right click, Language

--- a/src/gui/lang/cs.txt
+++ b/src/gui/lang/cs.txt
@@ -1,15 +1,22 @@
 ACTION_BACK=Zpět
 ACTION_FORWARD=Dopředu
+ACTION_HOME=Domů
 ACTION_REFRESH=Obnovit
 ACTION_UP=Nahoru
+ADD_TO_FAVORITES=Přidat do oblíbených
 ANY=Libovolné
 ANY_TAGS_COMMA=Obsahující libovolný štítek (odděleno čárkou)
 APP_TITLE=Termíny
 CLEAR=Vyčistit
 COLUMNS=Sloupce
+COPY=Kopírovat
 CREATED=Vytvořeno
+CUT=Vyjmout
 DATA_FOLDER_PATH=Složka s daty
+DELETE=Smazat
+DELETE_PERMANENTLY=Smazat natrvalo
 DESCRIPTION=Popis
+ERROR_INVALID_PATH=Neplatná cesta: {path}
 EXCLUDE=Vynechat
 EXCLUDE_TAGS_COMMA=Vynechat štítky (odděleno čárkou)
 FAVORITES=Oblíbené
@@ -19,9 +26,18 @@ ICON_PATH=Umístění ikony
 LEFT_DOCK_TITLE=Navigační panel
 MODIFIED=Upraveno
 NAME=Jméno
+NAVIGATED_TO_PATH=Přecházím na: {path}
+NAVIGATED_UP=Přechod nahoru
+NEW=Nové
+NEW_DIRECTORY=Nová složka
+NEW_RECORD=Nový záznam
+PASTE=Vložit
 RECORD_ID=ID záznamu
 RECORDS=Záznamy
+RECOVER=Obnovit
 RECYCLE_BIN=Koš
+REMOVE_FROM_FAVORITES=Odebrat z oblíbených
+RENAME=Přejmenovat
 REQUIRED=Požadované
 REQUIRED_TAGS_COMMA=Požadované štítky (odděleno čárkou)
 SEARCH=Vyhledat
