--- a/src/gui/lang/en_en.txt
+++ b/src/gui/lang/en_en.txt
@@ -2,12 +2,29 @@ LANG=English
 LANG_LOCAL=English
 TEST_MSG=Hi\tThis is a text= \n with a newline!"
 APP_TITLE=Terminy
+ACTION_HOME=Home
+ADD_TO_FAVORITES=Add to Favorites
+COPY=Copy
+CUT=Cut
+DELETE=Delete
+DELETE_PERMANENTLY=Delete Permanently
+ERROR_INVALID_PATH=Invalid path: {path}
 NAV_BACK=Back
 NAV_FORWARD=Forward
+NAV_HOME=Home
 NAV_UP=Up
 NAV_PATH_PLACEHOLDER=Your path here, eg. /invoices/
 NAV_PATH_LABEL=New Path
 NAV_REFRESH=Refresh
+NAVIGATED_TO_PATH=Navigated to: {path}
+NAVIGATED_UP=Navigated up
+NEW=New
+NEW_DIRECTORY=New Directory
+NEW_RECORD=New Record
+PASTE=Paste
+RECOVER=Recover
+REMOVE_FROM_FAVORITES=Remove from Favorites
+RENAME=Rename
 STATUS_READY=Ready
 FOLDERS=Folders
 FOLDERS_FAVORITES=Favorites
